k8s/tienda/templates/ingress/payments-webhook.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: payments-webhook-ingress
spec:
 rules:
  - http:
     paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
         service:
          name: payments-webhook
          port:
           number: 3000
